Add Vsync modes and FPS limiter
- Add Enums for 3 Vsync mode: Disabled, Adaptive and Enabled.
- Add FPS limiter to game loop logic.